jilles      2005/11/03 12:06:45 UTC	(20051103-3429)
  Log:
  Free the nodes for recvq/sendq on connection_close().
  

  Changes:	Modified:
  +2 -0		trunk/libatheme/connection.c (File Modified) 


pfish       2005/11/03 07:06:37 UTC	(20051103-3427)
  Log:
  Shorten up notice (Last seen address now becomes Last login from)
  

  Changes:	Modified:
  +2 -2		trunk/modules/nickserv/info.c (File Modified) 
  +2 -2		trunk/modules/userserv/info.c (File Modified) 


pfish       2005/11/03 07:00:06 UTC	(20051103-3425)
  Log:
  NickServ/UserServ: Keep track of last seen vhosts for users to be displayed in INFO, and actual hosts for opers.
  

  Changes:	Modified:
  +14 -0	trunk/modules/nickserv/identify.c (File Modified) 
  +5 -0		trunk/modules/nickserv/info.c (File Modified) 
  +14 -0	trunk/modules/nickserv/register.c (File Modified) 
  +5 -0		trunk/modules/userserv/info.c (File Modified) 
  +13 -0	trunk/modules/userserv/login.c (File Modified) 
  +13 -0	trunk/modules/userserv/register.c (File Modified) 


jilles      2005/11/03 02:47:40 UTC	(20051103-3423)
  Log:
  - /stats h shows all possible uplinks (similar to /stats c)
  - /stats t includes 'T' before each RPL_STATSDEBUG data item
  - add /stats v, shows ircops current uplink and connection
    duration (no sendq info yet as that'd need tweaks to or deep
    grovelling in claro)
  

  Changes:	Modified:
  +33 -14	trunk/src/ptasks.c (File Modified) 


jilles      2005/11/03 01:45:06 UTC	(20051103-3421)
  Log:
  Free the metadata in myuser_delete().
  

  Changes:	Modified:
  +7 -0		trunk/src/node.c (File Modified) 


jilles      2005/11/03 01:35:02 UTC	(20051103-3419)
  Log:
  Free the nodes in metadata_delete().
  

  Changes:	Modified:
  +3 -0		trunk/src/node.c (File Modified) 


alambert    2005/11/03 01:15:02 UTC	(20051103-3417)
  Log:
  Add atheme.{account,channel}.delete_metadata

  Changes:	Modified:
  +63 -0	trunk/modules/xmlrpc/account.c (File Modified) 
  +80 -2	trunk/modules/xmlrpc/channel.c (File Modified) 