@@ -4,7 +4,7 @@
  *
  * Commandlist manipulation routines.
  *
- * $Id: commandtree.h 2983 2005-10-18 18:21:56Z nenolod $
+ * $Id: commandtree.h 3433 2005-11-03 22:17:00Z jilles $
  */
 
 #ifndef COMMANDLIST_H
@@ -29,11 +29,11 @@ struct fcommandentry_ {
 E void command_add(command_t *cmd, list_t *commandtree);
 E void command_add_many(command_t **cmd, list_t *commandtree);
 E void command_delete(command_t *cmd, list_t *commandtree);
-E void command_exec(char *mynick, char *origin, char *cmd, list_t *commandtree);
+E void command_exec(service_t *svs, char *origin, char *cmd, list_t *commandtree);
 E void command_help(char *mynick, char *origin, list_t *commandtree);
 
 E void fcommand_add(fcommand_t *cmd, list_t *commandtree);
 E void fcommand_delete(fcommand_t *cmd, list_t *commandtree);
-E void fcommand_exec(char *mynick, char *origin, char *channel, char *cmd, list_t *commandtree);
+E void fcommand_exec(service_t *svs, char *origin, char *channel, char *cmd, list_t *commandtree);
 
 #endif
