@@ -1,3 +1,12 @@
+jilles      2005/11/03 12:11:14 UTC	(20051103-3431)
+  Log:
+  Free u->server->userlist node in user_delete().
+  
+
+  Changes:	Modified:
+  +1 -0		trunk/src/node.c (File Modified) 
+
+
 jilles      2005/11/03 12:06:45 UTC	(20051103-3429)
   Log:
   Free the nodes for recvq/sendq on connection_close().
